# bannou

./: .gitattributes  .gitignore  LICENSE  alembic.ini  config.example.yaml  dev-requirements.txt  pyproject.toml  requirements.txt
.github/: dependabot.yaml
.github/workflows/: ci.yml  codeql.yml  lint.yml  ruff.yml
bannou/: __init__.py  __main__.py  client.py  settings.py
bannou/database/: __init__.py  association_tables.py  base.py  context.py  guilds.py  tags.py  users.py
bannou/database/migrations/: env.py
bannou/database/models/: __init__.py  guilds.py  tags.py
bannou/extensions/: event_handler.py  stats.py
dev-requirements/: mypy.txt
pipelines/: config.py  formatting.nox.py  mypy.nox.py  nox.py  ruff.nox.py  slotscheck.nox.py
scripts/: schema.sql
scripts/migrations/: env.py
