[project]
name = "bannou"
version = "0"

[tool.setuptools.packages.find]
include = ["bannou*"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
force_single_line = true
add_imports = ["from __future__ import annotations"]

[tool.slotscheck]
strict-imports = true
require-superclass = true
require-subclass = true

[tool.mypy]
strict = true
plugins = ["sqlmypy"]

[[tool.mypy.overrides]]
module = "uvloop.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.per-file-ignores]
# F401: module imported but unused - Init files wont use their imports
"__init__.py" = ["F401"]
